--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,12 +75,13 @@ server {
 #         root /usr/share/nginx/html;
 #         try_files $uri $uri/ /index.html;
 #         
-#         # Setări de securitate
-#         add_header X-Content-Type-Options nosniff;
-#         add_header X-XSS-Protection "1; mode=block";
-#         add_header X-Frame-Options SAMEORIGIN;
-#         add_header Referrer-Policy strict-origin-when-cross-origin;
-#         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' https://webservicesp.anaf.ro;";
+#         # Setări de securitate întărite (ACTIVAT)
+#         add_header X-Content-Type-Options nosniff always;
+#         add_header X-XSS-Protection "1; mode=block" always;
+#         add_header X-Frame-Options DENY always;
+#         add_header Referrer-Policy strict-origin-when-cross-origin always;
+#         # Content Security Policy ACTIVAT pentru protecție XSS
+#         add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://webservicesp.anaf.ro wss: ws:; frame-src 'none'; object-src 'none'; upgrade-insecure-requests;" always;
 #     }
 #     
 #     # Proxy pentru API
