--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "@sentry/tracing": "^7.120.4",
     "@tanstack/react-query": "^5.90.2",
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/lodash": "^4.17.20",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/pdfkit": "^0.17.3",
+    "@types/qrcode": "^1.5.5",
     "@types/xml2js": "^0.4.14",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
@@ -74,19 +76,24 @@
     "cmdk": "^1.1.1",
     "commander": "^14.0.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "drizzle-zod": "^0.8.3",
     "embla-carousel-react": "^8.6.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "form-data": "^4.0.4",
     "framer-motion": "^12.23.24",
     "glob": "^11.0.3",
+    "helmet": "^8.1.0",
     "input-otp": "^1.4.2",
     "ioredis": "^5.8.1",
+    "isomorphic-dompurify": "^2.28.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
@@ -94,12 +101,15 @@
     "node-cron": "^4.2.1",
     "nx": "^21.6.4",
     "openai": "^6.3.0",
+    "otplib": "^12.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
     "postgres": "^3.4.7",
     "prom-client": "^15.1.3",
+    "qrcode": "^1.5.4",
+    "rate-limit-redis": "^4.2.2",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
@@ -127,10 +137,12 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.7.2",
     "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
