feat(security): Implementare completă audit de securitate și sistem logging securizat
SECURITY AUDIT COMPLET - Branch DualServer

✅ VULNERABILITĂȚI CRITICE REMEDIATE:
- Eliminat expunere tokeni JWT în console (100% obfuscați: eyJhbG...c2d)
- Eliminat expunere UUID-uri în logs (format: f74b89a3-...-cff7039b8c2d)
- Eliminat logging credențiale (username/password)
- Eliminat parolă hardcodată din auth-page.tsx

✅ SISTEM LOGGING SECURIZAT:
- Creat /apps/web/src/lib/utils/security-logger.ts (301 linii)
  * maskToken() - obfuscare JWT
  * maskUUID() - obfuscare identificatori
  * maskPassword(), maskEmail(), maskIP(), maskURL()
  * maskSensitiveData() - obfuscare recursivă automată
  * logger cu nivele (debug/info/warn/error)
  * Logging condițional DEV/PROD

✅ REFACTORIZARE LOGGING (84+ console.log eliminate):
- queryClient.ts - 20+ modificări, tokeni obfuscați, port din ENV
- use-auth.tsx - 15+ modificări, eliminat logging credențiale
- useCollabApi.ts - 37 modificări, toate DEBUG logs securizate
- CollabNotificationsWidget.tsx - 6 modificări
- logger.ts - adăugat maskSensitiveData()
- sentry.ts - 6 modificări, eliminat logging verbose

✅ ELIMINARE DATE HARDCODATE:
- main.ts: TOATE porturile din ENV (ZERO hardcoding)
- CORS origins: Construite dinamic din VITE_FRONTEND_PORT
- Backend port: Din APP_PORT_BACKEND sau PORT
- Verificare production: exit(1) dacă ENV lipsesc

✅ CONFIGURARE ENVIRONMENT:
- .env actualizat cu 10 variabile noi (păstrat conținut existent)
- VITE_LOG_LEVEL, VITE_ENABLE_SENSITIVE_LOGS, CORS_ORIGINS
- VITE_FRONTEND_PORT, VITE_BACKEND_PORT, VITE_DB_PORT
- ENV_VARIABLES_TEMPLATE.md creat (186 linii)

✅ RAPOARTE SECURITATE GENERATE:
- SECURITY_AUDIT_REPORT.md (836 linii) - Audit OWASP Top 10 2021
- HARDCODED_DATA_AUDIT.md (400 linii) - Catalog date hardcodate
- HARDCODED_DATA_SCAN_AUTOMATED.md - Scanare 1156 fișiere
- docs/SECURITY.md (734 linii) - Ghid complet securitate
- SECURITY_IMPLEMENTATION_SUMMARY.md (493 linii)
- scripts/security/scan-hardcoded-

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,7 +15,12 @@
     "strict": true,
     "target": "ES2022",
     "types": ["vite/client", "node"],
-    "noEmit": true
+    "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@shared/*": ["../../libs/shared/src/*"]
+    }
   },
   "include": ["src/**/*", "index.html"],
   "references": [{ "path": "./tsconfig.node.json" }]
