CRITICAL FIX: Multi-tenant security - eliminare acces cross-company
🚨 EROARE CRITICĂ DE SECURITATE CORECTATĂ:

Înainte, când user NU avea company_id, aplicația da acces la "prima companie din DB"
Aceasta este o VULNERABILITATE MASIVĂ în aplicații multi-tenant!

REMEDIERI:
✅ libs/admin/src/services/role.service.ts (2 endpoint-uri)
   - /api/admin/roles: Returnează 403 dacă user fără company_id
   - /api/admin/roles/test-roles: Adăugat requireAuth + verificare company_id

✅ libs/audit/src/routes/audit.routes.ts (2 endpoint-uri)
   - Toate endpoint-urile: 403 Forbidden dacă user fără company_id
   - ZERO acces cross-company permis

✅ apps/web/vite.config.ts
   - Port backend construit dinamic din ENV (zero hardcoding)

PRINCIPLE MULTI-TENANT ENFORCE:
- User TREBUIE să aibă company_id
- Acces DOAR la date din compania user-ului
- NICIODATĂ fallback la "prima companie" sau "default company"
- 403 Forbidden dacă company_id lipsește

Fix imports:
- Corectat schema import: @geniuserp/shared/schema (nu path relativ)
- AuditService.console.log -> AuditService.log
- Eliminat unused imports (permissions, and)
- Logger.info cu parametri corecți

Scripturi de test (validate-accounting-implementation.ts, add_missing_class1_accounts.ts):
- Păstrate cu "prima companie" - sunt SCRIPTURI INTERNE de setup/test
- NU sunt endpoint-uri API publice

Developed by: neacisu <neacsu.alex@gmail.com>

--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -29,6 +29,7 @@
         "port": 5000,
         "hmr": true
       },
+      "note": "Port este suprascris de vite.config.ts din APP_PORT_FRONTEND ENV var",
       "configurations": {
         "production": {
           "buildTarget": "web:build:production",
