--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "cmdk": "^1.1.1",
     "commander": "^14.0.2",
     "connect-pg-simple": "^10.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
@@ -173,6 +174,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/archiver": "^7.0.0",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
